--- a/src/main/resources/templates/carts/CreateCart.html
+++ b/src/main/resources/templates/carts/CreateCart.html
@@ -15,69 +15,52 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto rounded border p-4 m-4">
-          <h2 class="text-center mb-5">Edit Product</h2>
-          <form method="post" th:object="${productDto}">
+          <h2 class="text-center mb-5">New Cart</h2>
+          <form method="post" th:object="${cartDto}">
             <div class="row mb-3">
-              <label class="col-sm-4 col-form-label">ID</label>
+              <label class="col-sm-4 col-form-label">Cart Number</label>
               <div class="col-sm-8">
-                <input readonly class="form-control-plaintext" th:value="${product.id}" />
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <label class="col-sm-4 col-form-label">Name</label>
-              <div class="col-sm-8">
-                <input class="form-control" th:field="${productDto.name}" />
+                <input class="form-control" th:field="${cartDto.cartNumber}" />
                 <p
-                  th:if="${#fields.hasErrors('name')}"
+                  th:if="${#fields.hasErrors('cartNumber')}"
                   th:errorclass="text-danger"
-                  th:errors="${productDto.name}"
+                  th:errors="${cartDto.cartNumber}"
                 ></p>
               </div>
             </div>
 
             <div class="row mb-3">
-              <label class="col-sm-4 col-form-label">Brand</label>
+              <label class="col-sm-4 col-form-label">Building</label>
               <div class="col-sm-8">
-                <input class="form-control" th:field="${productDto.brand}" />
+                <input class="form-control" th:field="${cartDto.building}" />
                 <p
-                  th:if="${#fields.hasErrors('brand')}"
+                  th:if="${#fields.hasErrors('building')}"
                   th:errorclass="text-danger"
-                  th:errors="${productDto.brand}"
+                  th:errors="${cartDto.building}"
                 ></p>
               </div>
             </div>
 
             <div class="row mb-3">
-              <label class="col-sm-4 col-form-label">Category</label>
+              <label class="col-sm-4 col-form-label">EID</label>
               <div class="col-sm-8">
-                <select class="form-select" th:field="${productDto.category}">
-                  <option value="Other">Other</option>
-                  <option value="Phones">Phones</option>
-                  <option value="Cameras">Cameras</option>
-                </select>
+                <input class="form-control" th:field="${cartDto.eid}" />
                 <p
-                  th:if="${#fields.hasErrors('category')}"
+                  th:if="${#fields.hasErrors('eid')}"
                   th:errorclass="text-danger"
-                  th:errors="${productDto.category}"
+                  th:errors="${cartDto.eid}"
                 ></p>
               </div>
             </div>
 
             <div class="row mb-3">
-              <label class="col-sm-4 col-form-label">Price</label>
+              <label class="col-sm-4 col-form-label">Phone Number</label>
               <div class="col-sm-8">
-                <input
-                  class="form-control"
-                  type="number"
-                  step="0.01"
-                  min="0"
-                  th:field="${productDto.price}"
-                />
+                <input class="form-control" th:field="${cartDto.phone}" />
                 <p
-                  th:if="${#fields.hasErrors('price')}"
+                  th:if="${#fields.hasErrors('phone')}"
                   th:errorclass="text-danger"
-                  th:errors="${productDto.price}"
+                  th:errors="${cartDto.phone}"
                 ></p>
               </div>
             </div>
@@ -87,20 +70,13 @@
               <div class="col-sm-8">
                 <textarea
                   class="form-control"
-                  th:field="${productDto.description}"
+                  th:field="${cartDto.description}"
                 ></textarea>
                 <p
                   th:if="${#fields.hasErrors('description')}"
                   th:errorclass="text-danger"
-                  th:errors="${productDto.description}"
+                  th:errors="${cartDto.description}"
                 ></p>
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <label class="col-sm-4 col-form-label">Created At</label>
-              <div class="col-sm-8">
-                <input readonly class="form-control-plaintext" th:value="${product.createdAt}" />
               </div>
             </div>
 
@@ -109,10 +85,7 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
               </div>
               <div class="col-sm-4 d-grid">
-                <a
-                  class="btn btn-outline-primary"
-                  href="/products"
-                  role="button"
+                <a class="btn btn-outline-primary" href="/carts" role="button"
                   >Cancel</a
                 >
               </div>
@@ -120,7 +93,6 @@
           </form>
         </div>
       </div>
-      >
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
