--- a/src/main/resources/templates/carts/index.html
+++ b/src/main/resources/templates/carts/index.html
@@ -13,39 +13,39 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center my-4">Products</h1>
+      <h1 class="text-center my-4">Carts</h1>
 
-      <a class="btn btn-primary" href="/products/create">Create Product</a>
+      <a class="btn btn-primary" href="/carts/create">Create Cart</a>
 
       <table class="table">
         <thead>
           <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Brand</th>
-            <th>Category</th>
-            <th>Price</th>
+            <!-- <th>ID</th> -->
+            <th>Cart Number</th>
+            <th>Building</th>
+            <th>EID</th>
+            <th>Phone</th>
             <th>Created At</th>
             <th>Action</th>
           </tr>
         </thead>
         <tbody>
-          <tr th:each="product : ${products}">
-            <td th:text="${product.id}"></td>
-            <td th:text="${product.name}"></td>
-            <td th:text="${product.brand}"></td>
-            <td th:text="${product.category}"></td>
-            <td th:text="@{${product.price} + '$'}"></td>
-            <td th:text="${product.createdAt.toString().substring(0, 10)}"></td>
+          <tr th:each="cart : ${carts}">
+            <!-- <td th:text="${cart.id}"></td> -->
+            <td th:text="${cart.cartNumber}"></td>
+            <td th:text="${cart.building}"></td>
+            <td th:text="${cart.eid}"></td>
+            <td th:text="${cart.phone}"></td>
+            <td th:text="${cart.createdAt.toString().substring(0, 10)}"></td>
             <td style="white-space: nowrap">
               <a
                 class="btn btn-primary btn-sm"
-                th:href="@{/products/edit(id=${product.id})}"
+                th:href="@{/carts/edit(id=${cart.id})}"
                 >Edit</a
               >
               <a
                 class="btn btn-danger btn-sm"
-                th:href="@{/products/delete(id=${product.id})}"
+                th:href="@{/carts/delete(id=${cart.id})}"
                 onclick="return confirm('Are you sure?')"
                 >Delete</a
               >
